--- a/video.html
+++ b/video.html
@@ -7,12 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<video  width="320" height="240" src="video/HB.mov" controls autoplay></video>
 	
-	<video controls autoplay>
-    <source src="video/HB.qt" type="video/qt">
-    <source src="video/HB.mov" type="video/mov">
-    </video>
-	
-
 	<div class="button-container"><a class="button" href="./index.html"> <span>Back</span> </a></div> </body>
 </html>
