--- a/index.html
+++ b/index.html
@@ -61,25 +61,25 @@
 			<img src="img/img5.jpg" alt="">
 		</div>
 		<div class="photo" id="photo6">
-			<img src="img/img6.jpg"  alt="">
+			<img src="img/img.6.jpg"  alt="">
 		</div>
 		<div class="photo" id="photo7">
-			<img src="img/img7.jpg"  alt="">
+			<img src="img/img.7.jpg"  alt="">
 		</div>
 		<div class="photo" id="photo8"> 
-			<img src="img/img8.jpg"  alt="">
+			<img src="img/img.8.jpg"  alt="">
 		</div>
 		<div class="photo" id="photo9">
-			<img src="img/img9.jpg"  alt="">
+			<img src="img/img.9.jpg"  alt="">
 		</div>
 		<div class="photo" id="photo10">
-			<img src="img/img10.jpg"  alt="">
+			<img src="img/img.10.jpg"  alt="">
 		</div>
 		<div class="photo" id="photo11">
-			<img src="img/img11.jpg"  alt="">
+			<img src="img/img.11.jpg"  alt="">
 		</div>
 		<div class="photo" id="photo12">
-			<img src="img/img12.jpg"  alt="">
+			<img src="img/img.12.jpg"  alt="">
 		</div>
 	</main>
 
